Disable mouse and vi mode on .tmux.conf

--- a/home/user/.tmux.conf
+++ b/home/user/.tmux.conf
@@ -27,12 +27,12 @@ bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 set-window-option -g automatic-rename on
 
 # mouse mode off
-#set -g mode-mouse off
+set -g mouse off
 
 # vi copypaste mode
-set-window-option -g mode-keys vi
-bind-key -T vi-copy 'v' send -X begin-selection
-bind-key -T vi-copy 'y' send -X copy-selection
+#set-window-option -g mode-keys vi
+#bind-key -T vi-copy 'v' send -X begin-selection
+#bind-key -T vi-copy 'y' send -X copy-selection
 
 # allows for faster key repetition
 set -s escape-time 0
