--- a/home/user/.screenrc
+++ b/home/user/.screenrc
@@ -52,6 +52,7 @@ bind K kill
 bind I login on
 bind O login off
 bind } history
+bind o focus
 
 # An example of a "screen scraper" which will launch urlview on the current
 # screen window
