Remove user name from .gitconfig

--- a/home/user/.gitconfig
+++ b/home/user/.gitconfig
@@ -5,8 +5,8 @@
 [alias]
 	d = difftool
 [user]
-	email = seunguk.shin@gmail.com
-	name = Seunguk Shin
+	email = user@gmail.com
+	name = user
 [core]
 	editor = vi
 [http]
