Add window name to status bar on tmux

--- a/home/user/.tmux.conf
+++ b/home/user/.tmux.conf
@@ -77,8 +77,8 @@ set -g status-right-length 140
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
 #set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1)#[default] #[fg=blue]%Y-%m-%d %a #[fg=white,bg=default,bright]%H:%M:%S'
-set -g window-status-format '#I#{pane_current_command} '
-set -g window-status-current-format '#I#{pane_current_command}##F'
+set -g window-status-format '#I:#W:#{pane_current_command} '
+set -g window-status-current-format '#I:#W:#{pane_current_command}##F'
 
 
 
