Change styles for tmux

--- a/home/user/.tmux.conf
+++ b/home/user/.tmux.conf
@@ -11,8 +11,7 @@ set -g base-index 1
 set -g default-terminal "screen-256color"
 
 # message color
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
+set-option -g message-style bg=colour235,fg=colour166,bold
 
 # clock color
 set-window-option -g clock-mode-colour green #green
@@ -64,7 +63,7 @@ set -g status-interval 1
 # status bar color
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set-option -g status-style dim
 
 # left align windows list
 set -g status-justify left
@@ -93,18 +92,13 @@ bind-key - split-window -v
 bind-key | split-window -h
 
 # default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=colour244,bg=default,dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright
 
 # pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235,bg=colour240
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
