--- a/home/user/.config/alacritty/alacritty.toml
+++ b/home/user/.config/alacritty/alacritty.toml
@@ -88,7 +88,7 @@ dynamic_padding = false  # Default: false
 # Values for `decorations` (macOS only):
 #     - transparent: Title bar, transparent background and title bar buttons
 #     - buttonless: Title bar, transparent background, but no title bar buttons
-decorations = "Full"  # Default: "Full"
+decorations = "transparent"  # Default: "Full"
 
 # Resize increments
 resize_increments = false  # Default: false
