Update kitty settings

--- a/home/user/.config/kitty/kitty.conf
+++ b/home/user/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      D2Coding
+font_family      Inconsolata Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -839,7 +839,7 @@ inactive_text_alpha 1.0
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -964,7 +964,7 @@ tab_bar_align left
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
 
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown.
@@ -1086,7 +1086,7 @@ background #000000
 
 #: The foreground and background colors.
 
-background_opacity 0.9
+background_opacity 0.7
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1143,7 +1143,7 @@ background_tint 0.0
 #: multiplicative with background_tint, it can be used to lighten the
 #: tint over the window gaps for a *separated* look.
 
-dim_opacity 0.75
+dim_opacity 0.8
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
