--- a/home/user/.gitconfig
+++ b/home/user/.gitconfig
@@ -17,3 +17,5 @@
 	ui = true
 [push]
 	default = simple
+[alias]
+	l = log --color --all --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
