Update tmux settings

--- a/home/user/.tmux.conf
+++ b/home/user/.tmux.conf
@@ -1,130 +1,176 @@
 # ------------------------------------------------------------------------------
 # base settings
 # ------------------------------------------------------------------------------
-# change prefix key
-set-option -g prefix C-g
+#bind -n C-. display "receive C-." \; send-keys C-.
+#bind -n C-. send-keys C-.
 
-# start numbering at 1
+# change prefix key (-g for global)
+unbind C-b
+set -g prefix C-t
+
+# sned prefix key to the application when getting prefix key twice
+bind C-t send-prefix
+
+# shorter delay for prefix key (-s for server)
+set -sg escape-time 0
+set -g display-time 300
+
+# start numbering at 1 for windows and panes
 set -g base-index 1
+set -g pane-base-index 1
+
+# reload the configuration
+bind r source-file ~/.tmux.conf \; display "Reloaded"
+
+# disable mouse
+setw -g mouse off
 
 # support 256 color
 set -g default-terminal "screen-256color"
 
-# message color
-set-option -g message-style bg=colour235,fg=colour166,bold
-
-# clock color
-set-window-option -g clock-mode-colour green #green
-
-# reload config
-bind r source-file $HOME/.tmux.conf \; display-message "Config reloaded..."
-
-# name new windows
-bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
-
-# auto window rename
-set-window-option -g automatic-rename on
-
-# mouse mode off
-set -g mouse off
-
-# vi copypaste mode
-#set-window-option -g mode-keys vi
-#bind-key -T vi-copy 'v' send -X begin-selection
-#bind-key -T vi-copy 'y' send -X copy-selection
-
-# allows for faster key repetition
-set -s escape-time 0
-
-# rather than constraining window size to the maximum size of any client 
-# connected to the *session*, constrain window size to the maximum size of any 
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
-
-# allows us to use c-g g <command> to send commands to a TMUX session inside 
-# another TMUX session
-bind-key g send-prefix
-
-# activity monitoring
+# notify events in other windows
 setw -g monitor-activity on
 set -g visual-activity on
 
-
-
 # ------------------------------------------------------------------------------
-# status bar
+# colors
 # ------------------------------------------------------------------------------
-# status bar encoding
-#set-option -g status-utf8 on
-
-# update every second
-set -g status-interval 1
-
-# status bar color
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-style dim
-
-# left align windows list
-set -g status-justify left
-
-# max length of left/right component
-set -g status-left-length 20
-set -g status-right-length 140
-
-# left/right component
-set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-#set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1)#[default] #[fg=blue]%Y-%m-%d %a #[fg=white,bg=default,bright]%H:%M:%S'
-set -g window-status-format '#I:#W:#{pane_current_command} '
-set -g window-status-current-format '#I:#W:#{pane_current_command}##F'
-
-
+# define colors
+LIGHTBLUE="#00afff"    # light blue
+WHITE="#e4e4e4"        # white
+YELLOW="#ffff00"       # yellow
+PINK="#ff00af"         # pink
+LIGHTGRAY="#8a8a8a"    # light gray
+GRAY="#303030"         # gray
+DARKGRAY="#080808"     # dark gray
+RED="#d70000"          # red
 
 # ------------------------------------------------------------------------------
 # windows / panes
 # ------------------------------------------------------------------------------
 # chage to last window
-bind-key C-g last-window
+bind t last-window
 
-# set window split
-bind-key - split-window -v
-bind-key | split-window -h
+# select a window (-r for repeatable)
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
 
-# default window title colors
-set-window-option -g window-status-style fg=colour244,bg=default,dim
+# split a window
+bind | split-window -h
+bind - split-window -v
 
-# active window title colors
-set-window-option -g window-status-current-style fg=colour166,bg=default,bright
-
-# pane border
-set-option -g pane-border-style fg=colour235,bg=colour240
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# hjkl pane traversal
+# select a pane
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# set to main-horizontal, 60% height for main pane
-#bind m set-window-option main-pane-height 60\; select-layout main-horizontal
+# resize a pane
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
-
+# pane colors
+set -g pane-border-style fg=$LIGHTGRAY,bg=$DARKGRAY,none
+set -g pane-active-border-style fg=$LIGHTBLUE,bg=$DARKGRAY,none
 
 # ------------------------------------------------------------------------------
-# settings for 1.9
+# status bar
 # ------------------------------------------------------------------------------
-# from powerline
-run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
-run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
+# message style
+set -g message-style fg=$DARKGRAY,bg=$LIGHTBLUE,none
+set -g message-command-style fg=$DARKGRAY,bg=$LIGHTBLUE,none
 
-if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' 'unbind c; bind c new-window -c "#{pane_current_path}"'
-if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' 'unbind s; bind s split-window -v -c "#{pane_current_path}"'
-if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
-if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
-if-shell '[$TMUX_VERSION_MAJOR -gt 1 -o \( $TMUX_VERSION_MAJOR -eq 1 -a $TMUX_VERSION_MINOR -ge 8 \)]' 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
+# update every second
+set -g status-interval 1
+
+# status bar position and align
+if-shell "[ $(uname) = 'Linux' ]" {
+  set -g status-position top
+} {
+  set -g status-position bottom
+}
+set -g status-justify left
+
+# status bar - default color
+set -g status-style fg=$WHITE,bg=$DARKGRAY,none
+
+# status bar - left (-a for append)
+set -g status-left-length 300
+set -g status-left ""
+set -ga status-left "#[fg=$DARKGRAY,bg=$YELLOW,none] ❐ #S #[fg=$YELLOW,bg=$PINK,none] "    # session name
+set -ga status-left "#[fg=$WHITE,bg=$PINK,none] ↑#(uptime | sed 's/^.*up//' | sed 's/\[\[:digit:\]\]\\{1,\\}\[\[:space:\]\]\\{1,\\}users.*$//' | sed 's/,//g' | sed 's/  / /g') #[fg=$PINK,bg=$DARKGRAY,none] "    # uptime
+
+# status bar - right
+set -g status-right-length 500
+set -g status-right ""
+set -ga status-right "#[fg=$LIGHTGRAY,bg=$DARKGRAY,none] #{cpu_fg_color}C:#{cpu_percentage} #{cpu_icon} #{ram_fg_color}R:#{ram_percentage} #{ram_icon} "    # cpu and ram
+set -ga status-right "#[fg=$LIGHTGRAY,bg=$DARKGRAY,none]#[fg=$LIGHTGRAY,bg=$DARKGRAY,none] #{battery_icon_status} #{battery_percentage} #{battery_icon_charge} "    # battery
+set -ga status-right "#[fg=$LIGHTGRAY,bg=$DARKGRAY,none]#[fg=$LIGHTGRAY,bg=$DARKGRAY,none] #(date +\"%m-%d %H:%M\") "    # time and date
+set -ga status-right "#[fg=$RED,bg=$DARKGRAY,none]#[fg=$WHITE,bg=$RED,none] #(whoami) "    # id
+set -ga status-right "#[fg=$WHITE,bg=$RED,non]#[fg=$DARKGRAY,bg=$WHITE,none] #H "    # host name
+
+# window styles
+set -g window-status-style "fg=$LIGHTGRAY,bg=$DARKGRAY,none"
+set -g window-status-current-style "fg=$DARKGRAY,bg=$LIGHTBLUE,none"
+set -g window-status-last-style "fg=$LIGHTBLUE,bg=$DARKGRAY,dim"
+
+set -g @window-status-left-style "fg=$DARKGRAY,bg=$DARKGRAY,none"
+set -g @window-status-main-style "fg=$LIGHTGRAY,bg=$DARKGRAY,none"
+set -g @window-status-right-style "fg=$DARKGRAY,bg=$DARKGRAY,none"
+
+set -g @window-status-last-left-style "fg=$DARKGRAY,bg=$GRAY,none"
+set -g @window-status-last-main-style "fg=$LIGHTBLUE,bg=$GRAY,none"
+set -g @window-status-last-right-style "fg=$GRAY,bg=$DARKGRAY,none"
+
+set -g @window-status-current-left-style "fg=$DARKGRAY,bg=$LIGHTBLUE,none"
+set -g @window-status-current-main-style "fg=$DARKGRAY,bg=$LIGHTBLUE,none"
+set -g @window-status-current-right-style "fg=$LIGHTBLUE,bg=$DARKGRAY,none"
+
+# normal / last window format
+set -g window-status-format ""
+set -ga window-status-format "#[#{?window_last_flag,#{@window-status-last-left-style},#{@window-status-left-style}}] "
+set -ga window-status-format "#[#{?window_last_flag,#{@window-status-last-main-style},#{@window-status-main-style}}]#I  #W "
+set -ga window-status-format "#[#{?window_last_flag,#{@window-status-last-right-style},#{@window-status-right-style}}]"
+
+# current window format
+set -g window-status-current-format ""
+set -ga window-status-current-format "#[#{@window-status-current-left-style}] "
+set -ga window-status-current-format "#[#{@window-status-current-main-style}]#I  #W "
+set -ga window-status-current-format "#[#{@window-status-current-right-style}]"
+
+# ------------------------------------------------------------------------------
+# plug in
+# ------------------------------------------------------------------------------
+# tmux plugin manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# logging
+set -g @plugin 'tmux-plugins/tmux-logging'
+
+# extrakto
+set -g @plugin 'laktak/extrakto'
+set -g @extrakto_key 'space'
+set -g @extrakto_copy_key 'tab'
+set -g @extrakto_insert_key 'enter'
+
+# resurrect
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# cpu / ram status
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @cpu_low_icon "▁"
+set -g @cpu_medium_icon "▄"
+set -g @cpu_high_icon "█"
+set -g @ram_low_icon "▁"
+set -g @ram_medium_icon "▄"
+set -g @ram_high_icon "█"
+
+# battery status
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
