--- a/home/user/.screenrc
+++ b/home/user/.screenrc
@@ -26,7 +26,7 @@ startup_message off
 #nethack on
 
 #defflow on # will force screen to process ^S/^Q
-deflogin on
+#deflogin on
 #autodetach off
 
 # turn visual bell on
@@ -43,8 +43,8 @@ defscrollback 10240
 # ------------------------------------------------------------------------------
 
 # mouse
-defmousetrack on
-mousetrack on
+#defmousetrack on
+#mousetrack on
 
 # Remove some stupid / dangerous key bindings
 bind ^k
@@ -53,8 +53,8 @@ bind ^\
 # Make them better
 bind \\ quit
 bind K kill
-bind I login on
-bind O login off
+#bind I login on
+#bind O login off
 bind } history
 bind o focus
 
@@ -62,6 +62,35 @@ bind o focus
 # screen window
 #
 #bind ^B eval "hardcopy_append off" "hardcopy -h $HOME/.screen-urlview" "screen urlview $HOME/.screen-urlview"
+
+# emacs keybindings for navigation in copy mode
+markkeys ^B=Y:^F=V:h=^B:l=^F:0=^A:$=^E
+
+# C-space sets mark. markkeys does it in screen 4.0 and higher, but 3.9x
+# needs the bindkey command. (note the ^@ escape sequence for C-space.)
+markkeys ' '=^@
+# bindkey -m ^@ stuff ' '
+
+# page up and page down
+bindkey -m -k kP stuff Y
+bindkey -m -k kN stuff V
+
+# failed attempt to make C-space work in i-search too
+# bindkey -m ^@ eval "stuff \033" "stuff ^@" 
+
+# special hack for C-e, since it should go *past*
+# the last char. -m means this is for copy mode only.
+bindkey -m ^e stuff "$^f"
+
+# C-g and other keys just quit copy mode. Esc does nothing.
+markkeys \033=\015=^G=^D=h=j=k=l=H=M=L=G=g=y=c=v=a=x=b=e=B=E=w
+markkeys @=\033
+
+# control arrows move by words. (set B, e, and w to F keys so that i can
+# use them to move by words, but they themselves still quit copy mode.)
+markkeys B=[:E=]:b={:e=}:w=>
+bindkey -m ^[Od stuff {  #"[[}"
+bindkey -m ^[Oc stuff ]  #"}]^f"
 
 # ------------------------------------------------------------------------------
 # TERMINAL SETTINGS
@@ -84,7 +113,12 @@ hardstatus string "%h%? users: %u%?"
 #hardstatus lastline "%-Lw%{= BW}%50>%n%f* %t%{-}%+Lw%<"
 #hardstatus alwayslastline "%-Lw%{= BW}%50>%n%f* %t%{-}%+Lw%<"
 #hardstatus alwayslastline '%{= G}[ %{G}%H %{g}][%= %{= w}%?%-Lw%?%{= R}%n*%f %t%?%{= R}(%u)%?%{= w}%+Lw%?%= %{= g}][ %{y}Load: %l %{g}][ %{B}%Y-%m-%d %{W}%c:%s %{g}]'
-hardstatus alwayslastline '%{= G}[ %S ][%{= W} %-Lw%{= R}%n*%f %t%{= W}%+Lw%= %{= G}][%{= Y} Load: %l %{= G}][%{= B} %Y-%m-%d %{= W}%c:%s %{= G}]'
+backtick 0 30 30 sh -c "uptime | sed 's/\^.*up//' | sed 's/[[:digit:]]\{1,\}[[:space:]]\{1,\}users.*$//' | sed 's/,//g' | sed 's/  / /g'"
+backtick 1 60 60 whoami
+backtick 2 30 30 sh -c "top -l 1 | head -n 10 | grep 'CPU usage' | awk '{print \$3}'"
+backtick 3 30 30 sh -c "top -l 1 | head -n 10 | grep 'PhysMem' | awk '{print \$2}'"
+backtick 4 60 60 sh -c "screen -ls | grep `ps -o ppid= -p $$` | awk '{print \$1}'"
+hardstatus alwayslastline '%{kY} %4` %{wM}%0`%{Kk} %-Lw%{bk}%n%f* %t%{-}%+Lw%=%{WK} C: %2` M: %3` %{wk} %m-%d %c %{WR} %1` %{kW} %H '
 # set these terminals up to be 'optimal' instead of vt100
 termcapinfo xterm*|linux*|rxvt*|Eterm* OP
 
@@ -98,6 +132,9 @@ termcapinfo xterm 'is=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;4;6l'
 # (which has scrollback), not the alternate screen buffer.
 #
 #termcapinfo xterm|xterms|xs|rxvt ti@:te@
+
+attrcolor b ".I"
+termcapinfo xterm-256color 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 
 # Enable non-blocking mode to better cope with flaky ssh connections.
 defnonblock 5
