--- a/home/user/.config/alacritty/alacritty.toml
+++ b/home/user/.config/alacritty/alacritty.toml
@@ -3,6 +3,7 @@
 ################################################################################
 # General
 ################################################################################
+[general]
 
 # Import additional configuration files
 #import = []
